package fr.campusetfocus.being;

public abstract class Enemy extends Being {
    public Enemy(String name, int life, int attack, int defense) {
        super(name, life, attack, defense);
    }
}

